<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- do NOT translate app_name ;) -->
    <string name="app_name" translatable="false">Bubble2</string>
    <string name="app_description">Android comic book reader</string>
    <string name="app_link" translatable="false">https://github.com/edeso/bubble2</string>
    <string name="app_license" translatable="false">GPL-3.0</string>

    <string name="about_version">Version</string>
    <string name="about_libraries">This application integrates the following libraries under the licenses mentioned. It wouldn\'t exist without them!</string>
    <string name="about_thanks">Thank you!</string>

    <string name="action_settings">Settings</string>

    <string name="action_view_rotate">Rotate</string>

    <string name="action_view_export">Export page</string>

    <string name="action_view_mode">View Mode</string>
    <string name="action_view_mode_aspect_fill">Aspect Fill</string>
    <string name="action_view_mode_aspect_fit">Aspect Fit</string>
    <string name="action_view_mode_fit_width">Fit Width</string>

    <string name="action_reading_mode">Reading Mode</string>
    <string name="action_reading_mode_left_to_right">Comics</string>
    <string name="action_reading_mode_right_to_left">Manga</string>

    <string name="menu_browser_filter">Filter</string>
    <string name="menu_browser_filter_all">All</string>
    <string name="menu_browser_filter_read">Read</string>
    <string name="menu_browser_filter_reading">Currently reading</string>
    <string name="menu_browser_filter_unread">Unread</string>
    <string name="menu_browser_filter_unfinished">Unfinished</string>

    <string name="menu_browser_context_reset">Reset</string>

    <string name="menu_sort_by">Sort by</string>
    <string name="menu_browser_sort_name">Name</string>
    <string name="menu_browser_sort_access">Last accessed</string>
    <string name="menu_sort_creation">Time added</string>
    <string name="menu_sort_modified">Time modified</string>
    <string name="menu_browser_sort_size">Size</string>
    <string name="menu_browser_sort_pages_total">Pages total</string>
    <string name="menu_browser_sort_pages_read">Pages read</string>
    <string name="menu_browser_sort_pages_left">Pages left</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="menu_library">Library</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_thumbnail_browser">Thumbnail Browser</string>
    <string name="menu_about">About</string>
    <string name="menu_preferences">Preferences</string>

    <string name="library_header_recent">Recent</string>
    <string name="library_header_all">All</string>

    <string name="directory_picker_header">Select library folder</string>
    <string name="directory_picker_confirm">Select</string>
    <string name="directory_picker_cancel">Cancel</string>

    <string name="search">Search</string>

    <string name="browser_search_hint">Please enter a search term</string>

    <string name="reload">Update library</string>
    <string name="reload_msg_fast">Quick library update</string>
    <string name="reload_msg_slow">Reload all library files</string>

    <string name="theme">Theme</string>
    <string name="theme_auto">Auto</string>
    <string name="theme_day">Day</string>
    <string name="theme_night">Night</string>

    <string name="alert_action_positive">Yes</string>
    <string name="alert_action_negative">No</string>
    <string name="alert_action_neutral">OK</string>
    <string name="switch_next_comic">Would you like to switch to the next comic?</string>
    <string name="switch_prev_comic">Would you like to switch to the previous comic?</string>

    <string name="library_empty">Your collection seems empty. Click \"folder\" icon to select library directory.</string>
    <string name="warning_missing_file">Missing file. Please update the library</string>

    <string name="preferences_reader_nav_overlay_activation_type">Reader navigation overlay activation type</string>
    <string name="preferences_reader_nav_overlay_activation_type_key">reader_nav_overlay_activation_type</string>
    <string name="preferences_reader_nav_overlay_activation_type_single_tap">Single tap</string>
    <string name="preferences_reader_nav_overlay_activation_type_single_tap_confirmed">Single tap allowing double tap to zoom(slower)</string>
    <string name="preferences_reader_nav_overlay_activation_type_long_press">Long tap</string>

    <string name="preferences_reader_nav_activation_threshold">Left/Right tap area to turn page</string>
    <string name="preferences_reader_nav_activation_threshold_key">preferences_reader_nav_activation_threshold_key</string>
    <string name="preferences_reader_nav_activation_threshold_summary">10\% ~ 30\%</string>
</resources>
