<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/drawer_group_mode"
           android:checkableBehavior="single">
        <item android:id="@+id/drawer_menu_library"
              android:icon="@drawable/ic_collections_image_24"
              android:checked="true"
              android:title="@string/menu_library"/>
        <item android:id="@+id/drawer_menu_browser"
              android:icon="@drawable/ic_folder_open_24"
              android:title="@string/menu_browser"/>
        <item android:id="@+id/drawer_menu_about"
              android:icon="@drawable/ic_info_24"
              android:title="@string/menu_about"/>
        <item android:id="@+id/drawer_menu_preferences"
              android:icon="@drawable/ic_cogwheel_24"
              android:title="@string/menu_preferences"/>
    </group>
</menu>