<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="vertical"
                android:padding="24dp">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textStyle="bold"
                    android:text="@string/directory_picker_header"/>
            <TextView
                    android:id="@+id/directory_current_text"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"/>
        </LinearLayout>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:id="@+id/directory_picker_refresh"
                android:contentDescription="@string/reload"
                android:src="@drawable/ic_refresh_24"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                app:tint="#000"/>
    </RelativeLayout>

    <!-- needs android:layout_weight or the buttons on the bottom wil not be displayed -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/SwipeRefreshLayout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
        <ListView
                android:id="@+id/directory_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:drawSelectorOnTop="true"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:minHeight="10dp">
        <Button
                android:id="@+id/directory_picker_confirm"
                android:text="@string/directory_picker_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:minWidth="64dp"
                style="?android:attr/borderlessButtonStyle"/>
        <Button
                android:id="@+id/directory_picker_cancel"
                android:text="@string/directory_picker_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/directory_picker_confirm"
                android:layout_toStartOf="@id/directory_picker_confirm"
                android:minWidth="64dp"
                style="?android:attr/borderlessButtonStyle"/>
    </RelativeLayout>
</LinearLayout>
