<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/about_application"
                android:clickable="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="0dp">

                <ImageView
                        android:id="@+id/aboutIcon"
                        android:layout_width="124dp"
                        android:layout_height="124dp"
                        android:layout_marginRight="16dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_launcher"/>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:layout_marginTop="8dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                        <TextView
                                android:id="@+id/aboutName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:textStyle="normal"
                                android:singleLine="true"
                                android:text="@string/app_name"/>

                        <TextView
                                android:id="@+id/aboutDescription"
                                app:layout_constraintStart_toEndOf="@id/aboutName"
                                app:layout_constraintBaseline_toBaselineOf="@id/aboutName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="6dp"
                                android:textSize="14sp"
                                android:textStyle="normal"
                                android:textColor="#666"
                                android:singleLine="true"
                                android:text="@string/app_description"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                            android:id="@+id/aboutVersion"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp"
                            android:gravity="center_horizontal"
                            android:textSize="@dimen/about_text_small"
                            android:textColor="#666"
                            android:singleLine="true"
                            android:text="just a dummy version text to be replaced and just some more text"/>

                    <TextView
                            android:id="@+id/aboutLink"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textSize="@dimen/about_text_small"
                            android:textStyle="normal"
                            android:textColor="#666"
                            android:singleLine="true"
                            android:text="@string/app_link"/>

                    <TextView
                            android:id="@+id/aboutLicense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textSize="@dimen/about_text_small"
                            android:textStyle="normal"
                            android:textColor="#666"
                            android:singleLine="true"
                            android:text="@string/app_license"/>
                </LinearLayout>
            </LinearLayout>
            <View
                    android:id="@+id/aboutDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="4dp"
                    android:background="#CCC"/>

            <TextView
                    android:id="@+id/aboutLibraries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_margin="4dp"
                    android:textSize="@dimen/about_text_small"
                    android:textStyle="normal"
                    android:textColor="#666"
                    android:text="@string/about_libraries"/>
            <TextView
                    android:id="@+id/aboutThanks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_margin="4dp"
                    android:textSize="@dimen/about_text_large"
                    android:textStyle="normal"
                    android:textColor="#666"
                    android:text="@string/about_thanks"/>

            <LinearLayout
                    android:id="@+id/about_libraries"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>